--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
-*{
-  margin: 0;
-  padding: 0;
+.scrollbar-hide {
+  -ms-overflow-style: none; 
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;     
 }
