--- a/src/components/cartIcon.module.css
+++ b/src/components/cartIcon.module.css
@@ -1,5 +1,6 @@
 .cartIconContainer {
-    position: relative;
+    position: fixed;
+    bottom: 50px;
     cursor: pointer;
     display: inline-flex;
     align-items: center;
