--- a/src/components/product.module.css
+++ b/src/components/product.module.css
@@ -1,6 +1,6 @@
 .productContainer{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     text-align: center;
     gap: 25px;    
